tests/test_proof/bad/dates_get_year-overlap.catala_en
## Test

```catala
declaration scope A:
  context x content date
  context y content boolean

scope A:
  definition x equals |2022-01-16|
  definition y under condition get_year of x < 2010 consequence equals true
  definition y under condition get_year of x >= 2010 and get_year of x < 2015 consequence equals false
  definition y under condition get_year of x >= 2015 and get_year of x <= 2020 consequence equals true
  definition y under condition get_year of x >= 2020 consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/dates_get_year-overlap.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
[ERROR] [A.y] At least two exceptions overlap for this variable:
┌─⯈ tests/test_proof/bad/dates_get_year-overlap.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
